--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "build": "react-scripts build",
     "pre-deploy": "cp build/index.html build/200.html",
-    "deploy": "surge build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "surge build"
+
   },
   "eslintConfig": {
     "extends": [
