update email forms

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eject": "react-scripts eject",
     "build": "react-scripts build",
     "pre-deploy": "cp build/index.html build/200.html",
-    "deploy": "surge build"
+    "deploy": "surge build --domain tabernacle-school.surge.sh"
   },
   "eslintConfig": {
     "extends": [
