reducing bundle size

--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.54.4",
+    "source-map-explorer": "^2.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
