--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build": "react-scripts build",
+    "build:wp": "PUBLIC_URL=/wp-content/reactpress/apps/tabernacle-frontend/build react-scripts build",
     "pre-deploy": "cp build/index.html build/200.html",
     "deploy": "surge build --domain tabernacle-school.surge.sh"
   },
