move pdfs from repo to google drive

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "build": "react-scripts build",
     "build:wp": "PUBLIC_URL=/wp-content/reactpress/apps/tabernacle-frontend/build react-scripts build",
     "pre-deploy": "cp build/index.html build/200.html",
-    "deploy": "surge build --domain tabernacle-school.surge.sh"
+    "deploy": "surge build --domain https://tabernacle-school.surge.sh"
   },
   "eslintConfig": {
     "extends": [
