add firebase deploy command to package.json

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "eject": "react-scripts eject",
     "build": "react-scripts build",
     "pre-deploy": "cp build/index.html build/200.html",
-    "deploy": "surge build --domain https://tabernacle-school.surge.sh"
+    "deploy:surge": "surge build --domain https://tabernacle-school.surge.sh",
+    "deploy:firebase": "firebase deploy --only hosting"
   },
   "eslintConfig": {
     "extends": [
