--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,6 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@fullcalendar/daygrid": "^5.11.2",
-    "@fullcalendar/google-calendar": "^5.11.2",
-    "@fullcalendar/react": "^5.11.2",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "@testing-library/jest-dom": "^5.16.5",
@@ -36,7 +33,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build": "REACT_APP_BASE_URL=https://tabernacle-backend.herokuapp.com react-scripts build",
-    "deploy": "firebase deploy --only hosting"
+    "firebase-deploy": "firebase deploy --only hosting"
   },
   "eslintConfig": {
     "extends": [
