--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
     "source-map-explorer": "^2.5.3",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
