--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,7 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "REACT_APP_BASE_URL=https://tabernacle-cms.up.railway.app react-scripts build",
-    "firebase-deploy": "firebase deploy --only hosting"
+    "build": "REACT_APP_BASE_URL=https://tabernacle-cms.up.railway.app react-scripts build"
   },
   "eslintConfig": {
     "extends": [
