--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-material-ui-carousel": "^3.4.2",
+    "react-pdf": "^7.3.0",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
