--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,6 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "postmark": "^3.0.18",
@@ -23,7 +20,6 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
-    "source-map-explorer": "^2.5.3",
     "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
@@ -51,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "source-map-explorer": "^2.5.3"
   }
 }
