--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,10 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@vitejs/plugin-react": "^4.0.4",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
     "source-map-explorer": "^2.5.3",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.9",
     "vite-plugin-svgr": "^3.2.0"
   }
