--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "axios": "^0.27.2",
+    "express-validator": "^7.0.1",
     "postmark": "^3.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
