--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.15",
+    "daisyui": "^3.7.7",
     "postcss": "^8.4.29",
     "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.3.3",
