--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@heroicons/react": "^2.1.1",
     "@mui/material": "^5.10.10",
     "axios": "^0.27.2",
     "express-validator": "^7.0.1",
