--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "swiper": "^11.0.5"
+  }
 }
