fix swiper install location

--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
+    "swiper": "^11.0.5",
     "validator": "^13.9.0",
     "vite-plugin-rewrite-all": "^1.0.1",
     "web-vitals": "^2.1.4"
