--- a/package.json
+++ b/package.json
@@ -7,8 +7,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "swiper": "^11.0.5"
-  }
+  "license": "ISC"
 }
